<resources>
    <string name="app_name">draw it</string>
    <string name="ocr_result_tip">인식 결과는 여기에 나타납니다.</string>
    <string name="image">get image</string>
    <string name="tune">tune</string>
    <string name="effect">effect</string>
    <string name="load">load</string>
    <string name="save">save</string>
    <string name="redo">redo</string>
    <string name="removeBackground">Remove Background</string>
    <string name="sketchOutline">Sketch Extract</string>
    <string name="photoOutline">Photo Outline Extract</string>
    <string name="lineLength">line size</string>
    <string name="extract">extract</string>
    <string name="auto">auto</string>
    <string name="manual">manual</string>
    <string name="zoom">zoom</string>
    <string name="next">next</string>
    <string name="ok">ok</string>
    <string name="layer">layer</string>
    <string name="color">color</string>
    <string name="eraser">eraser</string>
    <string name="draw">draw</string>
    <string name="quality">quality</string>
    <string name="sampleSize">sample size</string>
    <string name="erode">erode</string>
    <string name="dilate">dilate</string>
    <string name="blockSize">line size</string>
    <string name="blur">blur radius</string>
    <string name="gaussian">blur</string>
    <string name="layerPremium">6 Layers Supported</string>
    <string name="saveCountPremium">5 Storage Supported</string>
    <string name="noLimitPremium">Unlimited Storage And 6 Layers Supported</string>
    <string name="purchase_succeed">purchase</string>
    <string name="ad_app_id">ca-app-pub-8336766054067217~4206402813</string>
    <string name="unit_id">ca-app-pub-8336766054067217/1360747627</string>
    <string name="tumblr_4_3">Tumblr (4x3)</string>
    <string name="tumblr_16_9">Tumblr(16x9)</string>
    <string name="facebook_720">Facebook(720p)</string>
    <string name="vimeo_1080">Vimeo(1080p)</string>
    <string name="instagram_1_1">Instagram(1x1)</string>
    <string name="instagram_16_9">Instagram(16x9)</string>
    <string name="youtube_720">Youtube(720p)</string>
    <string name="youtube_1080">Youtube(1080p)</string>
    <string name="px">px</string>
    <string name="width">width</string>
    <string name="height">height</string>
    <string name="current">Current Sketch file :</string>
    <string name="fps">fps</string>
    <string name="zero">0</string>
    <string name="advertise_ment">Advertising will play while waiting</string>
    <string name="fit_image">fit image</string>
    <string name="ratio_4_3">4 : 3</string>
    <string name="square">1 : 1</string>
    <string name="ratio_3_4">3 : 4</string>
    <string name="ratio_16_9">16 : 9</string>
    <string name="free">free</string>
    <string name="custom">custom</string>
    <string name="ratio_9_16">9 : 16</string>
    <!--    <string name="layerPrice">$1.5</string>
        <string name="savePrice">$1.5</string>
        <string name="noLimitPrice">$4</string>-->

</resources>
