<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <TextView
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:text="@string/layerPremium"
            android:textSize="15sp"
            android:textColor="@color/darkWhite"/>
        <Button
            android:layout_marginEnd="20dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/layerButton"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textColor="@color/darkWhite"
            android:backgroundTint="@color/gray"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"

        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/darkWhite"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:text="@string/saveCountPremium"
            android:textSize="15sp" />
        <Button
            android:layout_centerVertical="true"
            android:backgroundTint="@color/gray"

            android:layout_marginEnd="20dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/saveButton"
            android:layout_alignParentEnd="true"
            android:textColor="@color/darkWhite"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"

        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_toStartOf="@+id/noLimitButton"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/noLimitPremium"
            android:textSize="15sp"
            android:textColor="@color/darkWhite"/>
        <Button
            android:layout_centerVertical="true"
            android:backgroundTint="@color/gray"

            android:layout_marginEnd="20dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/noLimitButton"
            android:layout_alignParentEnd="true"
            android:textColor="@color/darkWhite"/>
    </RelativeLayout>

</LinearLayout>